--- a/src/common/SharedKernel/SharedKernel.csproj
+++ b/src/common/SharedKernel/SharedKernel.csproj
@@ -7,4 +7,9 @@
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
+      <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
+    </ItemGroup>
+
 </Project>
