--- a/src/common/BuildingBlocks.Domain/BuildingBlocks.Domain.csproj
+++ b/src/common/BuildingBlocks.Domain/BuildingBlocks.Domain.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
 
